--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/kyobo_db
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=6476
 ## spring ??? (???) ?? ##
 spring.messages.basename=locale
 spring.messages.encoding=utf-8
@@ -25,3 +25,10 @@ spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.registration.kakao.client-secret=	pW1y1aptw5saU65X1R266dRCzsgVMMRV
 spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_email
+
+## file upload
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.location=C:\\web_19_files
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=10MB
+com.kyobo.koreait.upload.path=C:\\web_19_files
