--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## spring DB ?? ##
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://web19-kyobo-db.ctkyxascwqzb.ap-northeast-2.rds.amazonaws.com/kyobo_db
+spring.datasource.url=jdbc:mysql://database-1.ctkyxascwqzb.ap-northeast-2.rds.amazonaws.com/kyobo_db
 spring.datasource.username=kyobouser
-spring.datasource.password=1234
+spring.datasource.password=rlatkddud8@
 ## spring ??? (???) ?? ##
 spring.messages.basename=locale
 spring.messages.encoding=utf-8
