--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_
 
 ## file upload
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=C:\\web_19_files
+spring.servlet.multipart.location=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=10MB
-com.kyobo.koreait.upload.path=C:\\web_19_files
+com.kyobo.koreait.upload.path=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY
