--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,20 @@ spring.security.oauth2.client.registration.kakao.scope=profile_nickname,account_
 
 ## file upload
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.location=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY
+spring.servlet.multipart.location=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY\\
 spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=10MB
-com.kyobo.koreait.upload.path=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY
+com.kyobo.koreait.upload.path=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY\\
+
+## AWS ??
+cloud.aws.credentials.access-key=AKIAZ7F3XD3LW5SYQZXJ
+cloud.aws.credentials.secret-key=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
+
+cloud.aws.s3.bucket=web19-kyobo
+
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.region.auto=false
+
+cloud.aws.stack.auto=false
+
+
