--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <artifactId>spring-boot-starter-oauth2-client</artifactId>
             <version>2.7.9</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-aws -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-aws</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
     <build>
