--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ## spring DB ?? ##
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://database-1.ctkyxascwqzb.ap-northeast-2.rds.amazonaws.com/kyobo_db
+spring.datasource.url=jdbc:mysql://kyobo-db.ctkyxascwqzb.ap-northeast-2.rds.amazonaws.com/kyobo_db
 spring.datasource.username=kyobouser
 spring.datasource.password=rlatkddud8@
 ## spring ??? (???) ?? ##
