--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## spring DB ?? ##
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://kyobo-db.ctkyxascwqzb.ap-northeast-2.rds.amazonaws.com/kyobo_db
-spring.datasource.username=kyobouser
-spring.datasource.password=rlatkddud8@
+spring.datasource.url=jdbc:mysql://localhost:3306/kyobo_db
+spring.datasource.username=root
+spring.datasource.password=6476
 ## spring ??? (???) ?? ##
 spring.messages.basename=locale
 spring.messages.encoding=utf-8
