--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ com.kyobo.koreait.upload.path=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY\\
 cloud.aws.credentials.access-key=AKIAZ7F3XD3LW5SYQZXJ
 cloud.aws.credentials.secret-key=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
 
-cloud.aws.s3.bucket=web19-kyobo
+cloud.aws.s3.bucket=kyobo-s3-bucket
 
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
