--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## spring DB ?? ##
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/kyobo_db
-spring.datasource.username=root
-spring.datasource.password=6476
+spring.datasource.url=jdbc:mysql://aws-kyobo-db.capzcfh8g4s2.ap-northeast-2.rds.amazonaws.com:3306/kyobo_db
+spring.datasource.username=admin
+spring.datasource.password=rlatkddud8
 ## spring ??? (???) ?? ##
 spring.messages.basename=locale
 spring.messages.encoding=utf-8
@@ -33,9 +33,9 @@ spring.servlet.multipart.max-file-size=30MB
 spring.servlet.multipart.max-request-size=10MB
 com.kyobo.koreait.upload.path=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY\\
 
-## AWS ??
-cloud.aws.credentials.access-key=AKIAZ7F3XD3LW5SYQZXJ
-cloud.aws.credentials.secret-key=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
+## AWS setting
+cloud.aws.credentials.access-key=AKIASQ2XCAXMCTWE4WOU
+cloud.aws.credentials.secret-key=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
 
 cloud.aws.s3.bucket=kyobo-s3-bucket
 
