230808 AWS S3 get img connect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ mybatis.mapper-locations=classpath:/mappers/**/*.xml
 ## spring ?? ??? ?? ##
 logging.level.com.boot=debug
 logging.level.org.springframework.security=debug
+logging.level.com.amazonaws.util.EC2MetadataUtils = error
 
 ## ??? ??? ?? ?? (Oauth2)
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
@@ -34,8 +35,8 @@ spring.servlet.multipart.max-request-size=10MB
 com.kyobo.koreait.upload.path=C:\\Users\\SangYoung\\Downloads\\WEB19 KSY\\
 
 ## AWS setting
-cloud.aws.credentials.access-key=AKIASQ2XCAXMCTWE4WOU
-cloud.aws.credentials.secret-key=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
+cloud.aws.credentials.access-key=AKIASQ2XCAXMDFXQ4FOC
+cloud.aws.credentials.secret-key=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
 
 cloud.aws.s3.bucket=kyobo-s3-bucket
 
@@ -43,5 +44,3 @@ cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
 
 cloud.aws.stack.auto=false
-
-
