--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 ## spring DB ?? ##
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://aws-kyobo-db.capzcfh8g4s2.ap-northeast-2.rds.amazonaws.com:3306/kyobo_db
+spring.datasource.url=jdbc:mysql://aws-kyobo-db.capzcfh8g4s2.ap-northeast-2.rds.amazonaws.com:3306/kyobo_db?allowMultiQueries=true
 spring.datasource.username=admin
 spring.datasource.password=rlatkddud8
+
 
 ## spring ??? (???) ?? ##
 spring.messages.basename=locale
